# advent-of-code

./: .gitignore
2020/: README.md
2020/Rust/advent_of_code_2020/: Cargo.toml
2020/Rust/advent_of_code_2020/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs  state.rs
2020/Rust/day10_adapter_array/: Cargo.toml
2020/Rust/day1_report_repair/: Cargo.toml  README.md
2020/Rust/day2_password_philosophy/: Cargo.toml  README.md
2020/Rust/day3_toboggan_trajectory/: Cargo.toml  README.md
2020/Rust/day4_passport_processing/: Cargo.toml  README.md
2020/Rust/day5_binary_boarding/: Cargo.toml  README.md
2020/Rust/day6_custom_customs/: Cargo.toml  README.md
2020/Rust/day7_handy_haversacks/: Cargo.toml
2020/Rust/day8_handeld_halting/: Cargo.toml  README.md
2020/Rust/day9_encoding_error/: Cargo.toml
2021/Rust/: Cargo.toml
2021/Rust/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs  state.rs
2022/Rust/: Cargo.toml
2022/Rust/src/: day_1.rs  day_2.rs  day_3.rs  main.rs  state.rs
2023/Rust/: Cargo.toml
2023/Rust/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  (+2 more)
2024/Rust/: Cargo.toml
2024/Rust/inputs_test/: day_2_1.in
2024/Rust/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_19.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs  state.rs
(+15 files in other folders)
