[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dialoguer = "0.11.0"
indicatif = "0.16.2"
colour = "0.6.0"
regex = "1.5.4"
tui = "0.16.0"
time = "0.3.30"
num = "0.4.1"
log = "0.4.17"
itertools = "0.12.0"
