[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["William Leemans <will.leemans@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dialoguer = "0.7.1"
indicatif = "0.15.0"
colour = "0.5.0"
regex = "1"
tui = "0.13.0"
